--- a/templates/home.html
+++ b/templates/home.html
@@ -1,9 +1,5 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>LocalSportsTracker</title>
-</head>
-<body>
+{% extends "layout.html" %}
+{% block content %}
     <h1>Home Page</h1>
-</body>
-</html>
+{% endblock content %}
+
