--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,25 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>About Page</h1>
+    <h1>About Local Sports Tracker</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col">
+          <h1>About Local Sports Tracker</h1>
+        </div>
+        <div class="col">
+          2 of 2
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          1 of 3
+        </div>
+        <div class="col">
+          2 of 3
+        </div>
+        <div class="col">
+          3 of 3
+        </div>
+      </div>
+    </div>
 {% endblock content %}
