Jeremy - fixed about page formatting

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,24 +1,18 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>About Local Sports Tracker</h1>
     <div class="container">
       <div class="row">
         <div class="col">
           <h1>About Local Sports Tracker</h1>
         </div>
         <div class="col">
-          2 of 2
+          <h6>A Passion Project</h6>
         </div>
       </div>
       <div class="row">
-        <div class="col">
-          1 of 3
-        </div>
-        <div class="col">
-          2 of 3
-        </div>
-        <div class="col">
-          3 of 3
+        <div class="col-md-auto">
+          <h3>A little about us!</h3>
+          <p>This is a group project that we decided to collaborate our minds to provide a quality project that helps others manage </p>
         </div>
       </div>
     </div>
