Adding Forms, forms.py, login.html, register.html Jeremy - Added stuff to about.html

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,17 +2,23 @@
 {% block content %}
     <div class="container">
       <div class="row">
-        <div class="col">
+        <div class="col-md-left">
           <h1>About Local Sports Tracker</h1>
-        </div>
-        <div class="col">
-          <h6>A Passion Project</h6>
         </div>
       </div>
       <div class="row">
         <div class="col-md-auto">
           <h3>A little about us!</h3>
-          <p>This is a group project that we decided to collaborate our minds to provide a quality project that helps others manage </p>
+          <h6>A Passion Project</h6>
+          <p>This project was assigned to us as a kind of choose your own adventure project.
+            We were tasked with finding an idea that we felt passionate about and coding it up.
+            We decided to work on and code up Local Sports Tracker to help make Sports enthusiasts
+            be able to find sporting events near them. Whether it is little league games and you
+            want to support their teams, maybe you want to join a simple pickup game at a nearby
+            park, or maybe you are the one wanting to host that game, Local Sports Tracker will
+            help you be able to access all of the nearby events. That way you can have fun and
+            enjoy life!
+            -- The Developers</p>
         </div>
       </div>
     </div>
