--- a/templates/layout.html
+++ b/templates/layout.html
@@ -49,7 +49,7 @@
             <p class='text-muted'>
               <ul class="list-group">
                 <li class="list-group-item list-group-item-light">Latest Posts</li>
-                <li class="list-group-item list-group-item-light">Announcements</li>
+                <li class="list-group-item list-group-item-light">Anouncements</li>
                 <li class="list-group-item list-group-item-light">Calendars</li>
               </ul>
             </p>
