Improving forms Jeremy - Finished About page, Changing styling inn layout.html and main.css

--- a/static/main.css
+++ b/static/main.css
@@ -1,6 +1,6 @@
 body {
-  background: #fafafa;
-  color: #333333;
+  background: #3d3d3d;
+  color: #000000;
   margin-top: 5rem;
 }
 
@@ -9,11 +9,11 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .bg-steel {
-  background-color: #5f788a;
+  background-color: #54ca18;
 }
 
 .site-header .navbar-nav .nav-link {
-  color: #cbd5db;
+  color: #000000;
 }
 
 .site-header .navbar-nav .nav-link:hover {
@@ -25,7 +25,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .content-section {
-  background: #ffffff;
+  background: #e4e4ff;
   padding: 10px 20px;
   border: 1px solid #dddddd;
   border-radius: 3px;
