--- a/localsportstracker/static/main.css
+++ b/localsportstracker/static/main.css
@@ -2,6 +2,17 @@ body {
   background: #3d3d3d;
   color: #000000;
   margin-top: 5rem;
+  font-family: 'Gudea', sans-serif;
+}
+
+p {
+  margin: 0;
+  text-indent: 3ch;
+  font-family: 'Gudea', sans-serif;
+}
+
+.link-color {
+    color: #1854CA;
 }
 
 .about{
@@ -11,6 +22,10 @@ body {
 .bg-steel {
   background-color: #54ca18;
 }
+
+/* .side-color {
+    background-color: #EBB3A8;
+} */
 
 .site-header .navbar-nav .nav-link {
   color: #000000;
@@ -25,7 +40,7 @@ body {
 }
 
 .content-section {
-  background: #e4e4ff;
+  background: #ffffff;
   padding: 10px 20px;
   border: 1px solid #dddddd;
   border-radius: 3px;
