--- a/localsportstracker/templates/about.html
+++ b/localsportstracker/templates/about.html
@@ -1,27 +1,31 @@
 {% extends "layout.html" %}
 {% block content %}
-    <div class="container">
-      <div class="about">
+<div class="container">
+    <div class="about">
         <div class="row">
-          <div class="col-md-left">
-            <h1>About Local Sports Tracker</h1>
-          </div>
+            <div class="col-md-left">
+                <h1>About Local Sports Tracker</h1>
+            </div>
         </div>
         <div class="row">
-          <div class="col-md-auto">
-            <h3>A little about us!</h3>
-            <h6>A Passion Project</h6>
-            <p>This project was assigned to us as a kind of choose your own adventure project.<br>
-              We were tasked with finding an idea that we felt passionate about and coding it up.<br>
-              We decided to work on and code up Local Sports Tracker to help make Sports enthusiasts<br>
-              be able to find sporting events near them. Whether it is little league games and you<br>
-              want to support their teams, maybe you want to join a simple pickup game at a nearby<br>
-              park, or maybe you are the one wanting to host that game, Local Sports Tracker will<br>
-              help you be able to access all of the nearby events. That way you can have fun and<br>
-              enjoy life!<br>
-              -- The Developers</p>
-          </div>
+            <div class="col-md-11">
+                <h3>A little about us!</h3>
+                <h6>A Passion Project</h6>
+                <div class="container-fluid">
+                    <p>
+                    This project was assigned to us as a kind of choose your own adventure project.
+                    We were tasked with finding an idea that we felt passionate about and coding it up.
+                    We decided to work on and code up Local Sports Tracker to help make Sports enthusiasts
+                    be able to find sporting events near them. Whether it is little league games and you
+                    want to support their teams, maybe you want to join a simple pickup game at a nearby
+                    park, or maybe you are the one wanting to host that game, Local Sports Tracker will
+                    help you be able to access all of the nearby events. That way you can have fun and
+                    enjoy life!<br>
+                    -- The Developers
+                    </p>
+                </div>
+            </div>
         </div>
-      </div>
     </div>
+</div>
 {% endblock content %}
